--- a/Portfolio/CSS/style.css
+++ b/Portfolio/CSS/style.css
@@ -11,30 +11,32 @@ body {
 }
 main {
   padding: 3rem;
-  background: url(/Portfolio/images/Backgrounds/Phone/Phone\ Body\ X.png);
+  background: url(/Portfolio/images/Backgrounds/Phone/Phone\ Body\ X.png)
+    no-repeat;
 }
 header {
   background-color: #f83d0c;
-  padding: 1.4rem;
-  padding-bottom: 0;
+  padding: 0.7rem;
   color: white;
   height: 100vh;
   font-weight: 400;
   text-align: center;
-  background: url(/Portfolio/images/Backgrounds/Phone/Phone\ Landing\ Page.png);
+  background: url(/Portfolio/images/Backgrounds/Phone/Phone\ Landing\ Page.png)
+    no-repeat;
 }
 
 header h1 {
   text-align: left;
   margin: 1rem 0 auto;
   font-size: 6rem;
-  line-height: 5.8rem;
-
+  line-height: 6.5rem;
+  font-family: Helvetica, sans-serif;
+  font-weight: 700;
   position: relative;
-  top: 8rem;
-
+  top: 12rem;
   background-color: rgba(255, 255, 255, 0);
 }
+
 header h4 {
   position: relative;
   top: 12rem;
@@ -43,12 +45,20 @@ header h4 {
   color: #0c0f0a;
 }
 
+.navlist {
+  text-align: right;
+}
+
 .navlink {
   color: white;
-  text-decoration: underline;
-  text-align: center;
+  text-decoration: none;
+  left: 90%;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 1.5rem;
+  font-style: italic;
   font-weight: 400;
-  margin: 0.5em;
+  margin: 0;
+  padding: 0;
 }
 
 h1 {
